# alpha_super

./: .gitignore  AGENTS.md  ASSUMPTIONS_AND_GAPS.md  CLAUDE.md  COMMANDS.md  CURRENT_STRATEGIES.md  FEATURE_ROADMAP.md  INCUBATION_FLOW.md  LIVE_FLOW_SQL_SIMPLIFICATION_REVIEW.md  LIVE_RELEASES_FIELDS.md  LIVE_RUNBOOK.md  LIVE_START_HERE.md  LIVE_TECHNICAL_REFERENCE.md  LIVE_TRADING_ARCHITECTURE.md  LIVE_USER_SETUP_QUICK.md  QUANT_PHILOSOPHY.md  README.md  THINGS_TO_ADD.md  TRANSACTION_COSTS_RESEARCH.md  execution_timing_analysis  execution_timing_analysis.py  execution_timing_analyzer.py  pyproject.toml
.claude/: launch.json  settings.local.json
alpha/: indicators.py  main.py
data/: data_loader.py  norgate_loader.py  norgate_snapshot_store.py
notebooks/: edge_mr_dv2.ipynb  edge_mr_qpi.ipynb  portfolio_opt_qpi_dv2.ipynb  testing_the_backtester.ipynb
portfolios/: current_book.yaml  current_book_fresh.yaml  current_multipod_all.yaml  current_multipod_all_aggresive.yaml  current_multipod_all_aggressive_yearly_inverse_volatility.yaml  current_multipod_all_aggressive_yearly_rebalanced.yaml  current_multipod_monthly.yaml  current_multipod_yearly_inverse_volatility.yaml  current_multipod_yearly_rebalanced.yaml  multipod.yaml  multipod_monthly.yaml  multipod_more_aggresive.yaml
scripts/: archive_research_results.py  benchmark_fast_indicators.py  build_dashboard_v2.py  collect_vps_debug_bundle.ps1  doctor_norgate_client.py  doctor_norgate_server.py  export_norgate_snapshot.py  live_ops_heartbeat.py  live_ops_watchdog.py  norgate_config_env.py  run_live_ops_watchdog.ps1  (+5 more)
(+764 files in other folders)
