[project]
name = "alpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databento>=0.53.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "norgatedata>=1.0.74",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "pyyaml>=6.0.2",
    "scipy>=1.15.3",
    "statsmodels>=0.14.4",
    "ta-lib>=0.6.3",
    "tqdm>=4.67.1",
    "xgboost>=3.0.0",
    "yfinance>=0.2.59",
]

[tool.setuptools.packages.find]
include = ["alpha*", "data*"]
